Project initial serious push.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
-<app-navbar></app-navbar>
+<!-- This is the main component of the Angular application -->
+<!-- It includes the navbar, router outlet for routing, and footer components -->
+<!-- The router outlet is where the routed components will be displayed -->
+<!-- The navbar and footer are static components that will be displayed on all pages -->
+<section class="app-container">
 
-<router-outlet></router-outlet>
+  <app-navbar></app-navbar>
 
-<app-footer></app-footer>
+  <router-outlet></router-outlet>
+
+  <app-footer></app-footer>
+
+</section>
