--- a/src/app/features/listings/pages/edit/listing-edit-page/listing-edit-page.component.html
+++ b/src/app/features/listings/pages/edit/listing-edit-page/listing-edit-page.component.html
@@ -1,3 +1,6 @@
+<app-edit-post></app-edit-post>
+
+<!--
 <section class="edit-listing-section p-4 max-w-xl mx-auto space-y-4">
   <section class="p-4 max-w-xl mx-auto space-y-4">
     <h1 class="text-2xl font-bold">Edit listing</h1>
@@ -16,3 +19,4 @@
     </form>
   </section>
 </section>
+-->
