--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,10 +10,10 @@
     <div class="footer-section links">
       <h3>Quick Links</h3>
       <ul>
-        <li><a href="/about">About Us</a></li>
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/careers">Careers</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <li><a routerLink="/about">About Us</a></li>
+        <li><a routerLink="/contact">Contact</a></li>
+        <li><a routerLink="/profile">Profile</a></li>
+        <li><a routerLink="/profile/dashboard">Dashboard</a></li>
       </ul>
     </div>
     <div class="footer-section contact">
@@ -30,7 +30,8 @@
         <a aria-label="GitHub" href="https://github.com/ahmetabdullahgultekin" rel="noopener" target="_blank">
           <fa-icon [icon]="faGithub"></fa-icon>
         </a>
-        <a aria-label="LinkedIn" href="https://www.linkedin.com/in/ahmet-abdullah-gultekin" rel="noopener" target="_blank">
+        <a aria-label="LinkedIn" href="https://www.linkedin.com/in/ahmet-abdullah-gultekin" rel="noopener"
+           target="_blank">
           <fa-icon [icon]="faLinkedin"></fa-icon>
         </a>
         <a aria-label="Instagram" href="https://www.instagram.com/gltkn.a.a/#" rel="noopener" target="_blank">
