--- a/src/app/shared/loading/loading.component.html
+++ b/src/app/shared/loading/loading.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="svc.loading()">
   <div class="backdrop">
     <div class="loading-center">
-      <img alt="Nayborly" class="loading-logo" height="100" ngSrc="/favicon.svg" width="100">
+      <img alt="Nayborly" class="loading-logo" height="60" ngSrc="/favicon.svg" width="230"/>
       <svg aria-label="Loading" class="spinner" fill="none"
            role="status" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <circle class="spinner-bg" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
