--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,8 @@
+<!-- Professional, animated, and modern Navbar -->
 <header class="navbar">
   <div class="navbar-container">
-    <a (click)="closeMenu()" class="navbar-logo" routerLink="/">
-      Nayborly
+    <a (click)="closeMenu()" class="navbar-logo animated-logo" routerLink="/">
+      <img alt="Nayborly Logo" class="navbar-logo-img" src="/favicon.svg"/> Nayborly
     </a>
     <button
       (click)="toggleMenu()"
@@ -19,16 +20,16 @@
       <ul>
         <li><a (click)="closeMenu()" routerLink="/">Home</a></li>
         <li><a (click)="closeMenu()" routerLink="/listings">Listings</a></li>
-        <li><a (click)="closeMenu()" routerLink="/post">Post</a></li>
         <li><a (click)="closeMenu()" routerLink="/about">About</a></li>
-        <li class="desktop-only"><a (click)="closeMenu()" routerLink="/login">Login</a></li>
-        <li class="desktop-only"><a (click)="closeMenu()" routerLink="/signup">Sign Up</a></li>
+        <li><a (click)="closeMenu()" routerLink="/contact">Contact</a></li>
+        <li class="desktop-only"><a (click)="closeMenu()" routerLink="/auth/sign-in">Login</a></li>
+        <li class="desktop-only"><a (click)="closeMenu()" routerLink="/auth/sign-up">Sign Up</a></li>
         <li class="mobile-only profile-link"><a (click)="closeMenu()" routerLink="/profile">Profile</a></li>
       </ul>
     </nav>
     <div class="navbar-auth desktop-only">
       <a class="navbar-profile" routerLink="/profile" title="Your Profile">
-        <img alt="Profile" height="32" ngSrc="/favicon.svg" width="32"/>
+        <img alt="Profile" class="navbar-profile-img" src="/favicon.svg"/>
       </a>
     </div>
   </div>
